--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <main>
         <div class="yell">
             <img src="23.jpg" alt="whhop!!!">
-            <h1> <br>Diving deep into the world of airdrop<strong>i am Dancum .</strong> <br>The cryptocurrency landscape is constantly evolving with new products and opportunities evolving regularly <br> <br></h1>
+            <h1> <br>Diving deep into the world of airdrop<strong> i am Dancun.</strong> <br>The cryptocurrency landscape is constantly evolving with new products and opportunities evolving regularly ...<br> <br></h1>
             
 
         </div>
