--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <main>
         <div class="yell">
             <img src="23.jpg" alt="whhop!!!">
-            <h1> <br>Diving deep into the world of airdrop<strong> i am Dancun.</strong> <br>The cryptocurrency landscape is constantly evolving with new products and opportunities evolving regularly ...<br> <br></h1>
+            <h1> <br>Diving deep into the world of airdrop<strong>.I am Dancun.</strong> <br>The cryptocurrency landscape is constantly evolving with new products and opportunities evolving regularly ...<br> <br></h1>
             
 
         </div>
@@ -33,12 +33,12 @@
         <div class="ra">
             <div class="ra1">
                 <h1 style="text-decoration: underline;">contact us</h1>
-                <p>.phone <strong>0717035473</strong> <br>.phone2 <strong>0704323349</strong> <br>email <strong>dancunjunior@ <br>gmail.com</strong></p>
+                <p>.phone <strong>0717035473</strong> <br> br>.phone2 <strong>0704323349</strong><br> <br>email <strong>dancunjunior@ <br>gmail.com</strong></p>
             </div>
 
             <div class="ra2">
                 <h1 style="text-decoration: underline;">location</h1>
-                <p>. my services are delivered countrywide<i>visit me in JKUAT.</i>main campus Nairobi </p>
+                <p>. my services are delivered countrywide<i> <br>visit me in JKUAT.</i>main campus <br>Nairobi </p>
             </div>
             
             <div class="ra3">
